service-mesh/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: restaurant
spec:
  mtls:
    mode: STRICT
