service-mesh/istio/virtualservice-order.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-order
  namespace: restaurant
spec:
  hosts:
    - service-order
  http:
    - route:
        - destination:
            host: service-order
            subset: stable
          weight: 90
        - destination:
            host: service-order
            subset: canary
          weight: 10
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure
      timeout: 10s
